Changes in Game, added winner and tested